# opensesame-visual-world-demo

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md
docs/: methods.md  privacy_and_provenance.md
experiment/: trials.csv  visual_world_demo.opensesame  visual_world_demo.osexp
scripts/: build_experiment.py  generate_demo_assets.py
src/visual_world/: __init__.py  logic.py
tests/: test_logic.py  test_repository.py
