[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opensesame-visual-world-demo"
version = "1.0.0"
description = "A privacy-safe demonstration of an auditory two-alternative visual-world task."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Daria Agafonova"}]

[project.optional-dependencies]
dev = ["Pillow>=10", "pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

